[package]
name = "ics11-beefy"
version = "0.1.0"
edition = "2021"
authors = []

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "ibc/std",
    "ibc-proto/std",
    "beefy-client/std",
    "beefy-light-client-primitives/std",
    "light-client-common/std",
    "pallet-mmr-primitives/std",
    "beefy-primitives/std",
    "sp-runtime/std",
    "sp-storage/std",
    "sp-trie/std",
    "anyhow/std",
    "codec/std",
    "prost/std",
    "prost-types/std",
    "serde/std",
    "bytes/std",
    "tendermint/std",
    "frame-support/std",
    "futures/std",
    "json/std",
    "sp-core/std",
    "sp-state-machine/std",
]

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
# ibc deps
ibc = { version = "0.28.0", default-features = false, git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.28.0-codec-borsh-serde" }
ibc-proto = { version = "0.25.0", default-features = false, git = "https://github.com/octopus-network/ibc-proto-rs", branch = "ibc" }
dyn-clone = "1.0.8"

# beefy deps
beefy-client = { package = "beefy-light-client", path = "../algorithms/beefy/verifier", default-features = false }
beefy-light-client-primitives = { path = "../algorithms/beefy/primitives", default-features = false }
light-client-common = { path = "../common", default-features = false }

# substrate deps
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0", default-features = false }
beefy-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0", default-features = false, package = "sp-consensus-beefy" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0", default-features = false }

# crates.io
anyhow = { version = "1.0.65", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false }
bytes = { version = "1.1.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
] }

# tendermint
# we used 0.28 version determined by the ibc-rs version
tendermint = { version = "0.28", default-features = false }
tendermint-proto = { version = "0.28", default-features = false }

#substrate
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0", default-features = false }

[dev-dependencies]
futures = "0.3.24"
serde = { version = "1.0.144", features = ["derive"] }
beefy-prover = { path = "../algorithms/beefy/prover" }
ibc = { version = "0.28.0", features = [
    "mocks",
], git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.28.0-codec-borsh-serde" }
ibc-proto = { version = "0.25.0", git = "https://github.com/octopus-network/ibc-proto-rs", branch = "ibc" }
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.29.0", features = [
    "substrate-compat",
] }
tokio = { version = "1.32.0", features = ["macros"] }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
json = { package = "serde_json", version = "1.0.85" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
# hyperspace-core = { path = "../../hyperspace/core", features = [
#     "testing",
#     "build-metadata-from-ws",
# ] }
