[package]
name = "beefy-prover"
version = "0.1.0"
edition = "2021"
authors = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
anyhow = "1.0.66"
once_cell = "1.16.0"
# subxt-codegen = { package = "codegen", path = "../../../utils/subxt/codegen" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-core-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
beefy-mmr = { package = "pallet-beefy-mmr", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-mmr = { package = "pallet-mmr", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
    "derive",
] }
rs_merkle = "1.2.0"
derive_more = { version = "0.99.17", features = ["from"] }
light-client-common = { path = "../../../common", features = ["enable-subxt"] }
jsonrpsee-core = { version = "0.16.2", features = ["async-client"] }

# Optional deps
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.29.0", features = [
    "substrate-compat",
] }
hex-literal = { version = "0.3.4" }
serde_json = { version = "1.0.74" }
pallet-mmr-rpc = { package = "mmr-rpc", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
hex = { version = "0.4.3" }
beefy-light-client-primitives = { path = "../primitives" }

[dev-dependencies]
light-client-common = { path = "../../../common" }
